removed unecessary files, fixed broken css

--- a/src/styles/Tutoring.module.css
+++ b/src/styles/Tutoring.module.css
@@ -9,6 +9,24 @@
   background-color: blue;
   width: 100vw;
 }
+
+.overlay {
+
+  color:#FFFFFF;
+  position: absolute;
+  top: 0;
+  z-index: 12;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+}
+
+.overlay h1 {
+
+  font-size: 8rem;
+}
+
+
 .header-container {
   position: relative;
   display: flex;
